# thebookofshaders

./: .gitignore  .gitmodules  .travis.yml  LICENSE  Makefile  Questions_to_author.txt  README-ch.md  README-de.md  README-es.md  README-fa.md  README-fr.md  README-id.md  README-it.md  README-jp.md  README-kr.md  README-pl.md  README-pt.md  README-ru.md  README-tr.md  README-ua.md  README-vi.md  README.md  chap-header.php  debug_regex.py  debug_server.py  docker-compose.yml  edit.html  edit.php  footer.php  function.html  graph.html  header.php  index.html  index.php  languages.php  makefile  manifest.json  package-lock.json  package.json  pwa-sw.js  (+5 more)
.github/: FUNDING.yml
00/: README-ch.md  README-da.md  README-de.md  README-es.md  README-fa.md  README-fr.md  README-gr.md  README-id.md  README-it.md  README-jp.md  README-kr.md  README-pl.md  README-pt.md  README-ru.md  README-tr.md  README-ua.md  README-vi.md  README.md  TITLE-gr.md  TITLE-pt.md  TITLE-tr.md  cmyk-halftone.frag  halftone.frag  index.html  index.php
01/: README-ch.md  README-de.md  README-es.md  README-fa.md  README-fr.md  README-gr.md  README-id.md  README-it.md  README-jp.md  README-kr.md  README-pl.md  README-pt.md  README-ru.md  README-tr.md  README-ua.md  README-vi.md  README.md  TITLE-gr.md  TITLE-pt.md  TITLE-tr.md  TITLE.md  index.html  index.php  notes.md
02/: README-ch.md  README-de.md  README-es.md  README-fa.md  README-fr.md  README-gr.md  README-id.md  README-it.md  README-jp.md  README-kr.md  README-pl.md  (+14 more)
04/sfml/: CMakeLists.txt
04/sfml/data/: shader.frag
04/sfml/src/: main.cpp
(+1186 files in other folders)
